--- a/about.html
+++ b/about.html
@@ -63,15 +63,39 @@
             <h1> WANDERLUST </h1><br>
             <div class="metin">
                 <p>
-    Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen 
+   1- Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen 
     <br>
     <br>
     insanların öğrenimini sağlamak. 
     <br>
     <br>
-    Ekstra olarak Three.js Kütüphanesiyle ele alınan, geliştirilmeyi bekleyen 3D Dünyamızda mevcuttur.
-</p>
-            </div>
+   2- Ekstra olarak Three.js Kütüphanesiyle ele alınan, geliştirilmeyi bekleyen 3D Dünyamızda mevcuttur. 
+    <br>
+    <br>
+    Fakat incelemek ve çalıştırmak isteyenler için ilk   <a href="https://github.com/Misi-i/3dEarth.git" style="color: rgb(229, 255, 58);">3dEarth</a>
+ kısmımızı paylaştık. 
+    
+ 
+<br>
+<br>
+   3- Bunun yanı sıra resimleri kendimize göre düzenledik ve kendi logomuzu tasarladık.
+
+   <br>
+   <br>
+   Resimleri tasarlamak için <a href="https://www.canva.com/" style="color: rgb(229, 255, 58);">Canva</a>
+
+   Ve <a href="https://creativecloud.adobe.com/apps/all/desktop/pdp/photoshop" style="color: rgb(229, 255, 58);">Photosop</a> kullandık.
+<br>
+<br>
+4- Son olarak ise Takımca çalıştık. Takım olmak her ne kadar zor olsa da, sonucunda çıkarttığınız birikimler,projeler sizi takdir etmeye yetiyor.         
+
+<br>
+<br>
+Teşekkürler
+<br>
+<br>
+<p style="color: blueviolet;">--ThreeDays</p>
+</p>  </div>
         </div>
   </div>
 </section>
