--- a/about.html
+++ b/about.html
@@ -17,7 +17,10 @@
          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
          <link href="https://fonts.googleapis.com/css2?family=Wallpoet&display=swap" rel="stylesheet">
      <!--Background Fonts-->
-</head>
+<!--Jquery-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<!--Jquery-->
+    </head>
 
 <body>
    <!--Header-->
@@ -55,13 +58,15 @@
 <!--Header-->
 
 
-<!--ABOUT-->
+<!--ABOUT--> 
+
+
 <section class="About">
 
     <div class="boxs">
         <div class="box1">
-            <h1> WANDERLUST </h1><br>
-            <div class="metin">
+            <button style="cursor: pointer;" id="AboutToggle"> WANDERLUST </button><br>
+            <div id="metin" style="display: none;">
                 <p>
    1- Bu sitede özel kordinatlarla alınmış kıta ve ülke tanıtan 2D harita yer almaktadır. Amacımız gezmeyi seven, kültürlerini geliştirmeyi düşünen 
     <br>
@@ -95,9 +100,13 @@ Teşekkürler
 <br>
 <br>
 <p style="color: blueviolet;">--ThreeDays</p>
-</p>  </div>
-        </div>
+</p> 
+        </div></div>
   </div>
+
+
+
+  
 </section>
 <!--ABOUT-->
 
