--- a/about.html
+++ b/about.html
@@ -72,18 +72,10 @@
     <br>
     <br>
     insanların öğrenimini sağlamak. 
-    <br>
-    <br>
-   2- Ekstra olarak Three.js Kütüphanesiyle ele alınan, geliştirilmeyi bekleyen 3D Dünyamızda mevcuttur. 
-    <br>
-    <br>
-    Fakat incelemek ve çalıştırmak isteyenler için ilk   <a href="https://github.com/Misi-i/3dEarth.git" style="color: rgb(229, 255, 58);">3dEarth</a>
- kısmımızı paylaştık. 
-    
- 
+   
 <br>
 <br>
-   3- Bunun yanı sıra resimleri kendimize göre düzenledik ve kendi logomuzu tasarladık.
+   2- Bunun yanı sıra resimleri kendimize göre düzenledik ve kendi logomuzu tasarladık.
 
    <br>
    <br>
@@ -100,6 +92,25 @@ Teşekkürler
 </p> 
         </div></div>
   </div>
+
+  <div class="boxs">
+    <div class="box1">
+        <button style="cursor: pointer;" id="EarthToggle"> 2D/3D Earth </button><br>
+        <div id="metin2" style="display: none;">
+            <p>
+1- 2D haritamız Ülkeler'in yiyecekleri,kültürleri ve gidilecek yerlerini göstermektedir. 
+<br>
+<br>
+
+2- Ekstra olarak Three.js Kütüphanesiyle ele alınan, geliştirilmeyi bekleyen 3D Dünyamızda mevcuttur. 
+<br>
+<br>
+Fakat incelemek ve çalıştırmak isteyenler için ilk   <a href="https://github.com/Misi-i/3dEarth.git" style="color: rgb(229, 255, 58);">3dEarth</a>
+kısmımızı paylaştık. 
+
+
+    </div></div>
+</div>
 
 
 
