--- a/index.html
+++ b/index.html
@@ -81,11 +81,10 @@
 
             <div class="btn"> 
                 <a href="map.html">WORLD</a>
-                <br>
                 <a href="3dEarth.html">3D WORLD</a>
             </div>
         </div>
-       
+        <img src="img/Map.jpg" alt="Worldmap">
     </div>
 </div> 
 <!--Map İntroduction-->
