--- a/3dEarth.html
+++ b/3dEarth.html
@@ -73,9 +73,11 @@
 <!--Article-->
 
 <!--Map İntroduction-->
-<div class="btn"> 
-    <a href="map.html">2D WORLD</a>
-</div> 
+<div class="İntros">
+    <div class="btn"> 
+        <a href="map.html">2D WORLD</a>
+    </div> 
+</div>
 <!--Map İntroduction-->
 
 <!--Content-->
